correction z-index et button utilisateur component

--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -1,13 +1,11 @@
 .banner {
   background-color: #3F51B5;
   height: 400px;
-  position: absolute;
-  top: 0;
-  width: 100% !important;
+  width: 100% ;
   z-index: -10;
   text-align: center;
-  padding-top: 100px;
   color: white;
+  padding-top: 20px;
 }
 
 .mat-title, .mat-subheading-2 {
@@ -31,20 +29,15 @@
   border-radius: 5px;
   border: 5px white solid;
 }
-.logo-container {
-  position: absolute;
-  top: 480px;
-  width: 100%;
-}
+
 .logo {
   height: 100px;
   border-radius: 50%;
+  margin-top: -20px;
 }
 .presentation-container {
-  position: absolute;
   text-align: center;
   width: 100%;
-  top: 580px;
 }
 
 .presentation-container .mat-headline, .presentation-container .mat-title {
