--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 60px;
   background-color: #C41F48;
-  position: sticky;
+  position: fixed;
   bottom: 0;
   left:0;
 }
