--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -1,5 +1,5 @@
 .container {
-  padding-top: 80px;
+  padding-top: 56px;
   margin-bottom: 60px;
   width: 100%;
   min-height: calc(100vh - 56px);
